# Cargo_Routing_System

./: CMakeLists.txt  Dockerfile  main.cpp
core/: CMakeLists.txt
core/include/dao/: CargoesDAO.h  DriverDAO.h  RoutesDAO.h  VehiclesDAO.h
core/include/entity/: Cargoes.h  Drivers.h  Routes.h  Vehicles.h
core/include/migration/: MigrationSQL.h
core/include/service/: CargoService.h  CargoesService.h  DriverService.h  DriversService.h  RouteService.h  RoutesService.h  ServiceContainer.h  VehicleService.h  VehiclesService.h
core/src/dao/: CargoesDAO.cpp  DriverDAO.cpp  RoutesDAO.cpp  VehiclesDAO.cpp
core/src/migration/: MigrationSQL.cpp
core/src/service/: CargoService.cpp  CargoesService.cpp  DriverService.cpp  DriversService.cpp  RouteService.cpp  RoutesService.cpp  ServiceContainer.cpp  VehicleService.cpp  VehiclesService.cpp
docker/: docker_compose.yaml
migration_files/: V1__create_core_routing_system_tables.sql
networking/: CMakeLists.txt
networking/include/factory/: RequestHandlerCargoes.h  RequestHandlerDrivers.h  RequestHandlerFactory.h  RequestHandlerRoutes.h  RequestHandlerVehicles.h
networking/include/http_server/: HttpServer.h
networking/include/response/: JsonCargoesResponse.h  JsonDriversResponse.h  JsonRoutesResponse.h  JsonVehiclesResponse.h
networking/src/factory/: RequestHandlerCargoes.cpp  RequestHandlerDrivers.cpp  RequestHandlerFactory.cpp  RequestHandlerRoutes.cpp  RequestHandlerVehicles.cpp
networking/src/http_server/: HttpServer.cpp
networking/src/response/: JsonCargoesResponse.cpp  JsonDriversResponse.cpp  JsonRoutesResponse.cpp  JsonVehiclesResponse.cpp
pch/: CMakeLists.txt  pch.h
